--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animation": "^0.1.3",
+    "d3-format": "^1.3.2",
+    "d3-scale": "^2.1.2",
+    "promzard": "^0.3.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-vis": "^1.11.3"
   },
   "scripts": {
     "start": "react-scripts start",
